Fix all logger compilation errors in LifeSteps.java
Agent-Logs-Url: https://github.com/pulsepointinc/qa-automation/sessions/532975ec-8307-43ec-9299-42b7034cae56

Co-authored-by: pp-psevak <194920265+pp-psevak@users.noreply.github.com>