@@ -1495,12 +1495,11 @@ public class LifeSteps {
 
     @And("Verify target type with respect to category")
     public void verifyTargetTypeWithRespectToCategory(DataTable categoryNameAndType) {
-        logger.info("Verifying: targeting panel with all targeting under below categories", targetCategory);
+        logger.info("Verifying target type with respect to category");
         Map<String, String> rawMap = categoryNameAndType.asMap(String.class, String.class);
         Map<String, List<String>> categoryNameAndTypeMap = CommonUtils.processDataTable(rawMap);
 
         for (Map.Entry<String, List<String>> entry : categoryNameAndTypeMap.entrySet()) {
-        logger.info("Verifying: target type with respect to category", categoryNameAndType);
             String key = entry.getKey();
             List<String> expectedValues = entry.getValue();
             logger.info("Checking category '{}' for expected target types: {}", key, expectedValues);
@@ -2201,7 +2200,7 @@ public class LifeSteps {
 
     @And("Verify Reload Now button is available and enabled")
     public void verifyReloadNowButtonIsAvailableAndEnabled() {
-        logger.info("Verifying: the Total NPI count displayed in Matched NPI section is similar to NPI records present in {}", fileName);
+        logger.info("Verifying Reload Now button is available and enabled");
         npiAutoImportedList.verifyIfImportSettingButtonIsVisible();
         boolean isReloadAvailable = npiAutoImportedList.verifyReloadNowButton();
         Assert.assertTrue("Reload Now Button is not available", isReloadAvailable);
@@ -2618,7 +2617,7 @@ public class LifeSteps {
 
     @And("Verify that the selected list is displayed in the targeting rule and retrieve the total count of targeted items")
     public void verifyThatTheSelectedListIsDisplayedInTheTargetingRuleAndRetrieveTheTotalNPICount() {
-        logger.info("Verifying: that the {} rule is added to the tactic and retrieve the count of selected lists", ruleType);
+        logger.info("Verifying that the selected list is displayed in the targeting rule and retrieving the total count");
         boolean isPresent = tacticSettings.isSelectedListPresentInTactic(npiName);
         Assert.assertTrue("Selected List is not available", isPresent);
         String text = tacticSettings.fetchSelectedListItemCountFromTactic(npiName);
@@ -2799,7 +2798,7 @@ public class LifeSteps {
 
     @And("Verify the Advertiser dropdown is displaying all Advertisers mapped to the logged in account")
     public void verifyTheAdvertiserDropdownIsDisplayingAllAdvertisersMappedToTheLoggedInAccount() {
-        logger.info("Verifying: the availability of below Creative Type options and the Default option is {}", defaultOption, dataTable);
+        logger.info("Verifying the Advertiser dropdown is displaying all Advertisers mapped to the logged in account");
     }
 
     @When("User selects the {string} creative type")
@@ -3111,7 +3110,7 @@ public class LifeSteps {
 
     @And("Verify that the Clickthrough URL and Landing Domain fields are validated as mandatory when all other required fields are filled")
     public void verifyThatTheClickthroughURLAndLandingDomainFieldsAreValidatedAsMandatoryWhenAllOtherRequiredFieldsIncludingAreFilled() {
-        logger.info("Verifying: user is able to type in {} categories", iabCategory);
+        logger.info("Verifying that the Clickthrough URL and Landing Domain fields are validated as mandatory");
         bulkCreativeUpload.clickPreviewButton();
         bulkCreativeUpload.clickOKButton();
         List<String> expectedMessages = Arrays.asList("Clickthrough URL is required", "Landing Page Domain is required");
@@ -3189,7 +3188,7 @@ public class LifeSteps {
 
     @And("Verify Data Granularity dropdown should show below list of values")
     public void verifyDataGranularityDropdownShouldShowBelowListOfValues(DataTable dataTable) {
-        logger.info("Data Granularity should have default value {}", defaultValue);
+        logger.info("Verifying Data Granularity dropdown shows expected list of values");
         List<String> dropdownValues = dataTable.asList(String.class);
         runReportPanel.showDataGranularityOptions();
         Assert.assertEquals(new HashSet<>(dropdownValues), new HashSet<>(runReportPanel.fetchDataGranularityOptions()));
@@ -3212,7 +3211,7 @@ public class LifeSteps {
 
     @And("User should be able to select multiple advertisers from the list")
     public void userShouldBeAbleToSelectMultipleAdvertisersFromTheList() {
-        logger.info("Advertiser drop-down should list advertisers mapped to {}", arg0);
+        logger.info("Verifying user can select multiple advertisers from the list");
         runReportPanel.clickAdvertiserDropdown();
         Assert.assertTrue("Unable to select multiple advertisers", runReportPanel.selectMultipleAdvertisersFromDropdown());
     }
@@ -3249,7 +3248,7 @@ public class LifeSteps {
 
     @Then("User should be able to select multiple values from dropdown")
     public void userShouldBeAbleToSelectMultipleValuesFromDropdown() {
-        logger.info("Campaign should load for selection when user types campaign initials {} in {} field", campaignInitials, fieldName);
+        logger.info("Verifying user can select multiple values from dropdown");
         List<String> valuesSelected = runReportPanel.selectMultipleValueFromDropdown();
         Assert.assertFalse("Unable to select multiple values from dropdown", valuesSelected.isEmpty());
         nameList.addAll(valuesSelected);
@@ -3276,7 +3275,7 @@ public class LifeSteps {
 
     @When("User clicks on Advanced Settings")
     public void userClicksOn() {
-        logger.info("Creative of selected tactic should load when user types creative names initials {} in {} field", creativeInitials, fieldName);
+        logger.info("Clicking on Advanced Settings");
         runReportPanel.clickAdvanceSettings();
     }
 
@@ -3296,7 +3295,7 @@ public class LifeSteps {
 
     @When("On Run Now tab, Report Period field should have options below")
     public void onRunNowTabReportPeriodFieldShouldHaveOptionsBelow(DataTable dataTable) {
-        logger.info("{} and {} tabs should be present in the Run Report pop-up", runNowTab, scheduleTab);
+        logger.info("Verifying Report Period field options on Run Now tab");
         List<String> dropdownValues = dataTable.asList(String.class);
         Assert.assertEquals(new HashSet<>(dropdownValues), new HashSet<>(runReportPanel.fetchReportPeriodOptions()));
     }
@@ -3363,7 +3362,7 @@ public class LifeSteps {
 
     @And("Verify that user is able to select start date and end date when Custom Dates option is selected")
     public void verifyThatUserIsAbleToSelectStartDateAndEndDateWhenCustomDatesOptionIsSelected() {
-        logger.info("Verifying: that by default {} option is selected for Report Period Field", buttonType);
+        logger.info("Verifying that user is able to select start date and end date when Custom Dates option is selected");
         Assert.assertTrue("Unable to select date from date picker", runReportPanel.selectStartAndEndDate());
     }
 
@@ -3568,7 +3567,7 @@ public class LifeSteps {
 
     @And("Verify that user is able to select Schedule start date and Schedule end date")
     public void verifyThatUserIsAbleToSelectScheduleStartDateAndScheduleEndDate() {
-        logger.info("Verifying: default value of the Frequency field is {}", defaultValue);
+        logger.info("Verifying that user is able to select Schedule start date and Schedule end date");
         Assert.assertTrue("Unable to select start date from date picker", scheduleReport.selectScheduleStartDate());
         Assert.assertTrue("Unable to select end date from date picker", scheduleReport.selectScheduleEndDate());
     }
@@ -3604,7 +3603,7 @@ public class LifeSteps {
 
     @And("Verify Send At field is available with Start Time and Timezone fields")
     public void verifySendAtFieldIsAvailableWithStartTimeAndTimezoneFields() {
-        logger.info("Verifying: default value of Send On is {}", defaultValue);
+        logger.info("Verifying Send At field is available with Start Time and Timezone fields");
         Assert.assertTrue("Send At fields - Time and TimeZone are not available", scheduleReport.isSendAtFieldAvailable());
     }
 
@@ -3747,7 +3746,7 @@ public class LifeSteps {
 
     @And("Verify Control File checkbox is present and by default it should be unchecked")
     public void verifyControlFileCheckboxIsPresentAndByDefaultItShouldBeUnchecked() {
-        logger.info("Verifying: compression field is available with below options and default value is {}", defaultCompressionType, dataTable);
+        logger.info("Verifying Control File checkbox is present and by default it should be unchecked");
         Assert.assertTrue("Control File checkbox is not available", scheduleReport.isControlFileCheckboxAvailable());
         Assert.assertTrue("Control File checkbox is not unchecked by default", scheduleReport.isControlFileCheckboxSelected());
     }
@@ -4209,7 +4208,7 @@ public class LifeSteps {
 
     @And("Verify status of line item is Incomplete when there are no tactics under the line item")
     public void verifyStatusOfLineItemIsIncompleteWhenThereAreNoTacticsUnderTheLineItem() {
-        logger.info("Verifying: line Item page has below tabs", dataTable);
+        logger.info("Verifying status of line item is Incomplete when there are no tactics under the line item");
         Assert.assertEquals("Incomplete", lineItemDetails.verifyLineItemStatus());
         Assert.assertEquals("Campaign is enabled . Tactic is Incomplete.", lineItemDetails.fetchIncompleteStatusToolTip());
     }
@@ -4967,7 +4966,7 @@ public class LifeSteps {
 
     @And("User checks Prime list with historical data check box")
     public void userChecksPrimeListWithHistoricalDataCheckBox() {
-        logger.info("Verifying: that Recency slider should range from {} to {} days and should be set to {} by default", recencyMin, recencyMax, recencyDefault);
+        logger.info("User checks Prime list with historical data check box");
         npiSmartList.selectPrimeListWithHistoricalDataCheckbox();
     }
 
@@ -5112,7 +5111,7 @@ public class LifeSteps {
 
     @And("Verify the availability of the Management Fee checkbox and when clicked, below options should be displayed")
     public void verifyTheAvailabilityOfTheManagementFeeCheckboxAndWhenClickedTheOptionsAndShouldBeDisplayed(DataTable dataTable) {
-        logger.info("Verifying: that Budget Status has the below options, and the default status is {}", defaultButton, dataTable);
+        logger.info("Verifying the availability of the Management Fee checkbox and options");
         List<String> expectedOptions = dataTable.asList(String.class);
         Assert.assertTrue("Management Fee checkbox is not available", campaigns.isManagementFeeAvailable());
         campaigns.clickManagementFee();
@@ -5221,7 +5220,7 @@ public class LifeSteps {
 
     @And("User verifies if the added custom field is available on New Campaign creation page")
     public void userVerifiesIfTheAddedCustomFieldIsAvailableOnNewCampaignCreationPage() {
-        logger.info("Verifying: that the custom field value {} is saved and displayed in the campaign details page", customFieldData);
+        logger.info("Verifying if the added custom field is available on New Campaign creation page");
         campaigns.navigateToCampaignDashboard();
         campaigns.createCampaign();
         Assert.assertEquals("Create New Campaign", campaigns.verifyCampaignText());
@@ -5276,7 +5275,6 @@ public class LifeSteps {
         String recordsCountFromUI;
 
         switch (listType) {
-        logger.info("Verifying: that the count of items in the downloaded {} list is the same as the item count displayed in the UI", listType);
             case "Keyword":
                 header = "\ufeffKeywords";
                 break;
@@ -5333,7 +5331,7 @@ public class LifeSteps {
 
     @And("Verify that download option should not be available for uploaded Email list")
     public void verifyThatDownloadOptionShouldNotBeAvailableForUploadedEmailList() {
-        logger.info("Verifying: that the counter on the left displays the correct value after file upload for {}", listType);
+        logger.info("Verifying that download option should not be available for uploaded Email list");
         Assert.assertFalse("Download icon is available for Email list", sharedList.isEmailListDownloadIconVisible());
     }
 
@@ -5598,7 +5596,7 @@ public class LifeSteps {
 
     @And("Verify File Name field is available on report panel")
     public void verifyFileNameFieldIsAvailableOnReportPanel() {
-        logger.info("Verifying: that user is not able to remove the pre-populated logged in user email from {} field", fieldName);
+        logger.info("Verifying File Name field is available on report panel");
         Assert.assertTrue("File Name field is not available on report panel", runReportPanel.isFileNameFieldAvailable());
     }
 
@@ -5667,7 +5665,7 @@ public class LifeSteps {
 
     @And("Verify that Report Period field has below options")
     public void verifyThatReportPeriodFieldHasBelowOptions(DataTable dataTable) {
-        logger.info("Verifying: report Period field is available with default value {}", defaultValue);
+        logger.info("Verifying that Report Period field has expected options");
         List<String> expectedOptions = dataTable.asList(String.class);
         List<String> actualOptions = scheduleReport.fetchReportPeriodOptions();
         Assert.assertEquals(new HashSet<>(expectedOptions), new HashSet<>(actualOptions));
@@ -5686,11 +5684,11 @@ public class LifeSteps {
         scheduleReport.clickThreeDotMenuForFileName();
         scheduleReport.selectGeneralVariableFromThreeDotMenu(generalVariable);
         if (generalVariable.contains("$CampaignName$"))
-            customFieldName = runReportPanel.fetchCampaignName().getFirst();
+            customFieldName = runReportPanel.fetchCampaignName().get(0);
         else if (generalVariable.contains("$LineItemName$"))
-            customFieldName = runReportPanel.fetchLineItemName().getFirst();
+            customFieldName = runReportPanel.fetchLineItemName().get(0);
         else if (generalVariable.contains("AdvertiserName"))
-            customFieldName = runReportPanel.fetchAdvertiserName().getFirst();
+            customFieldName = runReportPanel.fetchAdvertiserName().get(0);
         scheduleReport.selectTimeVariableFromThreeDotMenu(timeVariable, dateTimeFormat);
         scheduleReport.closeThreeDotMenu();
         logger.info("Selected General variable and Time variable from three-dot menu successfully");
@@ -5698,7 +5696,7 @@ public class LifeSteps {
 
     @And("User verifies that the help text displays the file name with the value of General and Time variables")
     public void userVerifiesThatTheHelpTextDisplaysTheFileNameWithTheValueOfGeneralAndTimeVariables() {
-        logger.info("User clicks the three-dot menu, selects the General variable - {} and Time variable - {} with Date-Time format {}", generalVariable, timeVariable, dateTimeFormat);
+        logger.info("Verifying that the help text displays the file name with the value of General and Time variables");
         String helpText = runReportPanel.fetchFileNameHelpText();
         String date = LocalDate.now().format(DateTimeFormatter.ofPattern("yyyyMMdd"));
         String expectedFileName = templateNameRandom + "_" + customFieldName + "_" + date + ".csv";
@@ -5797,7 +5795,7 @@ public class LifeSteps {
 
     @And("User clicks 3 dot menu and selects Archive button for the active deal from the deal listing")
     public void userClicksArchiveButtonForTheActiveDealFromTheDealListing() {
-        logger.info("Verifying: that {} should not display in deals listing under Life Marketplace Deals tab", exchangeType);
+        logger.info("User clicks 3 dot menu and selects Archive button for the active deal from the deal listing");
         pmp.clickArchiveButtonForCreatedPrivateDeal(dealNameRandom);
         Assert.assertTrue("Archive Confirmation Dialog is not displayed", pmp.isArchiveConfirmationDialogDisplayed());
     }
@@ -5810,7 +5808,7 @@ public class LifeSteps {
 
     @Then("Verify that the deal is moved to archived deal section")
     public void verifyThatTheDealIsMovedToArchivedSectionAndNotListedUnderActiveDealSection() {
-        logger.info("User clicks {} button from the search section of deal listing page", buttonType);
+        logger.info("Verifying that the deal is moved to archived deal section");
         pmp.searchDealFromList(dealNameRandom);
         Assert.assertTrue("Deal is not listed in the Archived Deal Listing page", pmp.isDealAvailable(dealNameRandom));
     }
@@ -5857,7 +5855,7 @@ public class LifeSteps {
 
     @And("User navigates to Setup Tab")
     public void userNavigatesToSetupTab() {
-        logger.info("Verifying: only life marketplace tab is displayed under Targeting templates section for {} rule type", ruleType);
+        logger.info("Navigating to Setup Tab");
         setup.clickSetupTab();
         setup.curatedMarketSubtab();
     }
